--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -42,7 +42,7 @@ One major outcome of this body of science is the various compiled databases of s
 
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. <!--BSH: I think Jamie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?-->
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. <!--BSH: I think Jamie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?  CCO: What about age - AquaMaps is pretty recent; before that, would IUCN have been the dominant dataset for marine?  Maybe we can track citations of AquaMaps, but citations of IUCN I think are generic - just cite the Red List - not referencing spatial information specifically, much less marine.-->
 
 We then subject two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis. ... ___substituting___ one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity. ___BSH suggestion: We used all unique species range data from both sources but substituted one dataset over the other for shared species to highlight the possible consequences of different data use decisions on our understanding of the status of and protection of marine biodiversity.___
 
@@ -59,7 +59,7 @@ The methodologies behind these datasets imply differences in prediction of speci
 
 BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
 
-The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons. <!--_and furthermore requires resolving differences (or choosing one source over the other) for the `r format(n_spp_both, big.mark = ',')` shared species._-->
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons.
 
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
@@ -85,19 +85,18 @@ p_q123_rev <- round(n_q123_rev/n_spp_both * 100, 1)
 
 To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). 
 
-<!--BSH: I think it’s stronger to start with the negative relationship overall, then talk about the 4 quadrants.  So I rearranged, in turn requiring a bit of editing-->
 The negative linear relationship <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> indicates that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
 Dividing the map-paired species into quadrants highlights different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
-The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their depth tolerance. <!-- BSH: Worth a few spot checks to confirm this is more or less true. And then maybe include 2-3 examples as figures in the SOM and refer to them here.-->
-Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps. _BSH: Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches._ <!--BSH: This is kinda redundant, just emphasizing a solution to the problem.  Not sure it's needed, or perhaps could be woven in to previous sentence.--> _commission error terminology?_
+The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. <!-- BSH: Worth a few spot checks to confirm this is more or less true. And then maybe include 2-3 examples as figures in the SOM and refer to them here.-->
+Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps. _BSH: Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches._ <!--BSH: This is kinda redundant, just emphasizing a solution to the problem.  Not sure it's needed, or perhaps could be woven in to previous sentence.-->
 
-Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence.  Consequently, area ratios are close to 100%, but similar extents are meaningless when the distributions are poorly aligned. _commission error terminology?_
+Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar extents are meaningless when the distributions are poorly aligned.
 
-The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  Often these mismatches arise when AquaMaps relies on limited data to predict species presence well beyond known occurrences.  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> ___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___
+<!--The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  Often these mismatches arise when AquaMaps relies on limited data to predict species presence well beyond known occurrences.  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> ___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___-->
 
-<!-- OLD: This breakdown by quadrant helps explain the negative linear relationship seen in the plot, in which increasing similarity in extent correlates with decreasing distribution alignment.  When extrapolating species range beyond known occurrences, the marginal range predicted by the AquaMaps model will fall in different locations than the marginal range predicted using IUCN methodology.  For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range.  As we examine species with increasingly similar extents, the differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.-->
+The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences; at the same time, IUCN range maps .  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences ___is there a good way to get the number of OBIS observations for each of these species, as an external validation of data-poor?)___, compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> ___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___
 
 -----
 
