--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -94,7 +94,7 @@ Ocean depth is explicitly included in AquaMaps models, while depth is frequently
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar extents are meaningless when the distributions are poorly aligned.
 
-<!--The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  Often these mismatches arise when AquaMaps relies on limited data to predict species presence well beyond known occurrences.  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> ___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___-->
+<!--The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  Often these mismatches arise when AquaMaps relies on limited data to predict species presence well beyond known occurrences.  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> <!--___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___-->
 
 The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences; at the same time, IUCN range maps .  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences ___is there a good way to get the number of OBIS observations for each of these species, as an external validation of data-poor?)___, compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> ___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___
 
